fix z-index date-time

--- a/src/components/NewTab/style.scss
+++ b/src/components/NewTab/style.scss
@@ -132,7 +132,7 @@ body {
         flex-flow: column;
         align-items: center;
         gap: 8px;
-        z-index: 1;
+        z-index: 3;
         transition: .25s color, .25s text-shadow;
 
         &.shadow {
